--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="css/stylesheet.css">
+  <link rel="icon" href="images/4leaf.ico">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Syne">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>SunBeach</title>
